// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateMermaidCode > T3-2: 4 표준 워크플로우 snapshot — 노드/엣지 수 일치 검증 > bug-tracking 1`] = `
"stateDiagram-v2
  [*] --> reported
  reported --> triaged : 분류
  triaged --> fixing : 수정 시작
  fixing --> fixed : 수정 완료
  fixed --> verified : 검증 완료
  fixed --> [*]
  verified --> [*]
  classDef category_todo fill:var(--muted),stroke:var(--border)
  classDef category_in_progress fill:oklch(from var(--primary) l c h / 0.15),stroke:var(--primary)
  classDef category_done fill:oklch(from var(--success) l c h / 0.15),stroke:var(--success)
  class reported category_todo
  class triaged category_todo
  class fixing category_in_progress
  class fixed category_done
  class verified category_done"
`;

exports[`generateMermaidCode > T3-2: 4 표준 워크플로우 snapshot — 노드/엣지 수 일치 검증 > kanban-basic 1`] = `
"stateDiagram-v2
  [*] --> backlog
  backlog --> todo : 계획
  todo --> doing : 시작
  doing --> done : 완료
  done --> [*]
  classDef category_todo fill:var(--muted),stroke:var(--border)
  classDef category_in_progress fill:oklch(from var(--primary) l c h / 0.15),stroke:var(--primary)
  classDef category_done fill:oklch(from var(--success) l c h / 0.15),stroke:var(--success)
  class backlog category_todo
  class todo category_todo
  class doing category_in_progress
  class done category_done"
`;

exports[`generateMermaidCode > T3-2: 4 표준 워크플로우 snapshot — 노드/엣지 수 일치 검증 > simple 1`] = `
"stateDiagram-v2
  [*] --> open
  open --> closed : 닫기
  closed --> open : 다시 열기
  closed --> [*]
  classDef category_todo fill:var(--muted),stroke:var(--border)
  classDef category_in_progress fill:oklch(from var(--primary) l c h / 0.15),stroke:var(--primary)
  classDef category_done fill:oklch(from var(--success) l c h / 0.15),stroke:var(--success)
  class open category_todo
  class closed category_done"
`;

exports[`generateMermaidCode > T3-2: 4 표준 워크플로우 snapshot — 노드/엣지 수 일치 검증 > software-default 1`] = `
"stateDiagram-v2
  [*] --> open
  open --> in_progress : 진행 시작
  in_progress --> in_review : 검토 요청
  in_review --> resolved : 해결 완료
  resolved --> closed : 닫기
  resolved --> [*]
  closed --> [*]
  classDef category_todo fill:var(--muted),stroke:var(--border)
  classDef category_in_progress fill:oklch(from var(--primary) l c h / 0.15),stroke:var(--primary)
  classDef category_done fill:oklch(from var(--success) l c h / 0.15),stroke:var(--success)
  class open category_todo
  class in_progress category_in_progress
  class in_review category_in_progress
  class resolved category_done
  class closed category_done"
`;
